--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,39 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-list{
+  list-style-type: none;
+  height: 100%;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-item{
+  margin: 0 auto;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-input{
+  text-align: right;
+  font-size: 50pt;
+  margin-right: 7%;
 }
 
-#container a {
-  text-decoration: none;
+ion-fab-button{
+  margin: 0 auto;
+  width: 20%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  font-size: 17pt;
+  --background: #363636;
+  --background-activated: #363636;
+}
+
+.operacao{
+  --background: #FF9F0C;
+  --background-activated: #FF9F0C;
+}
+
+.operacao2{
+  --background: #a5a5a5;
+  --background-activated: #a5a5a5;
+  --color: #050505;
+}
+
+#zero{
+  width: 45%;
 }
