falta somente porcentagem

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-item></ion-item>
     <ion-item></ion-item>
     <ion-item>
-      <ion-input [ngModel]="expressao"></ion-input>
+      <ion-input [ngModel]="visor"></ion-input>
     </ion-item>
     <ion-item>
       <ion-fab-button class="operacao2" (click)="zerar()">AC</ion-fab-button>
